--- a/style.css
+++ b/style.css
@@ -1,30 +1,46 @@
 body{
     margin: 0;
     padding: 0;
+    position: relative;
 }
 .container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 70px 2 1fr;
+    width: 100%;
 
 }
 
 #lists{
     display: none;
+    list-style: none;
+}
+
+#lists a{
+    color: white;
 }
 
 .nav-bar{
     grid-column: 1/8;
     grid-row: 1/2;
-    display: flex;
-    justify-content: space-between;
     background-color:#292F39;
     padding-bottom: 20px;
+    width: 100%;
+    position: fixed;
 
 }
 
+.nav-bar section{
+    display: flex;
+    justify-content: space-between;
+}
 .nav-bar i{
     color: white;
+    top: 10px;
+}
+
+.nav-bar li{
+    margin-bottom: 5px;
 }
 
 .left-icon{
@@ -35,7 +51,12 @@ body{
 .right-icon{
     margin-right: 20px;
     margin-top: 10px;
+}
 
+.cross-icon{
+    display: none;
+    margin-right: 20px;
+    margin-top: 15px;
 }
 
 .main-content{
@@ -77,7 +98,12 @@ video{
 }
 
 .contact-me{
-    background-color: blue;
-    width: 300px;
-    height: 300px;
+    background-color: #292F39;
+    color: white;
+    text-align: center;
+    padding: 0;
+}
+.contact-me p{
+    margin: 0;
+    margin-bottom: 5px;
 }
