--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     position: relative;
 }
-.container {
+.main-container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 70px 2 1fr;
@@ -30,7 +30,7 @@ body{
     padding-bottom: 20px;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
 
 }
 
@@ -86,22 +86,67 @@ video{
 .profile img{
     width: 30%;
     position: relative;
-    top: -50px;
+    top: -60px;
     border-radius: 10px;
+    z-index: 1;
 }
 
-.main-content .about-me{
+.main-content .intro{
     grid-row: 2/3;
-    text-align: left;
+    text-align: center;
     margin: 0 auto;
+    width: 90%;
+    position: relative;
+    top: -20px;
+}
+
+#skill-text{
+    text-align: center;
+    border-bottom: 1px solid rgb(184, 184, 184);
     margin-bottom: 50px;
-    width: 80%;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+.skills{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.skills p{
+    padding: 0;
+    margin-top: 0;
+}
+#jquery-icon{
+    width: 70px;
+    height: 80px;
+}
+
+.about-me{
+    text-align: center;
+    background-color: #292F39;
+    color: white;
+}
+
+.about-me h3{
+    text-transform: uppercase;
+    border-bottom: 1px solid gray;
 }
 
 .projects{
     text-align: center;
 }
 
+.project-text{
+    text-align: center;
+    border-bottom: 1px solid rgb(184, 184, 184);
+    margin-bottom: 50px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font-size: 30px;
+}
 .projects .project-row1, .projects .project-row2{
     display: flex;
     justify-content: space-around;
