--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body{
     padding: 0;
     position: relative;
 }
-.main-container {
+
+.container {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 70px 2 1fr;
@@ -21,6 +22,7 @@ body{
 
 #lists a{
     color: white;
+    text-decoration: none;
 }
 
 .nav-bar{
@@ -79,10 +81,12 @@ video{
     height: 100%;
     width: 100%
 }
+
 .profile{
     text-align: center;
     margin: 0;
 }
+
 .profile img{
     width: 30%;
     position: relative;
@@ -100,7 +104,7 @@ video{
     top: -20px;
 }
 
-#skill-text{
+#skill{
     text-align: center;
     border-bottom: 1px solid rgb(184, 184, 184);
     margin-bottom: 50px;
@@ -108,6 +112,7 @@ video{
     text-transform: uppercase;
     font-size: 30px;
 }
+
 .skills{
     display: flex;
     flex-direction: row;
@@ -119,24 +124,48 @@ video{
     padding: 0;
     margin-top: 0;
 }
+
+.fa-html5{
+    color: #DD4B25;
+}
+
+.fa-js-square{
+    color: #EFD81D;
+}
+
+.fa-python{
+    color: #3773A5;
+}
+
+.fa-css3-alt{
+    color: #0172B6;
+}
+
 #jquery-icon{
     width: 70px;
     height: 80px;
+}
+
+.skills .fa-github{
+    color: #292F39;
 }
 
 .about-me{
     text-align: center;
     background-color: #292F39;
     color: white;
+    padding: 20px 0;
+    margin: 10px 0;
 }
 
-.about-me h3{
+#about-me{
     text-transform: uppercase;
     border-bottom: 1px solid gray;
 }
 
 .projects{
     text-align: center;
+    margin: 50px auto;
 }
 
 .project-text{
@@ -147,6 +176,7 @@ video{
     text-transform: uppercase;
     font-size: 30px;
 }
+
 .projects .project-row1, .projects .project-row2{
     display: flex;
     justify-content: space-around;
@@ -155,7 +185,21 @@ video{
 #footer{
     grid-column: 1/8;
     grid-row: 3/4;
+    background-color: #292F39;
 
+}
+
+.contact-me{
+    color: white;
+    text-align: center;
+    padding: 0 10px;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.contact-text{
+    margin: 0;
 }
 
 .social-icons{
@@ -164,15 +208,15 @@ video{
 }
 
 .icon{
-    margin: 30px 10px 0 10px;
+    margin: 10px 10px 20px 10px;
 }
 
-.contact-me{
-    background-color: #292F39;
+.fa-twitter{
+    color: #55ADED;
+}
+.fa-envelope, .fa-github{
     color: white;
-    text-align: center;
-    padding: 0 10px;
-    margin: 0 auto;
-    margin-top: 20px;
-    width: 100%;
+}
+.fa-instagram{
+    color: #B600C8;
 }
