--- a/desktop.css
+++ b/desktop.css
@@ -29,8 +29,12 @@
         margin: 0;
     }
 
-    .main-content .video{
-        margin-top: 70px;
+    .main-content .animation{
+        background: url(/images/realistic-water-splash-dark-background_1355-88.jpg) no-repeat center;
+        background-size: cover;
+        width: 100%;
+        height: 70vh;
+        background-color: black;
     }
 
     .profile img{
@@ -46,7 +50,7 @@
     }
 
     #skill{
-        font-size: 40px;
+        font-size: 30px;
         border: none;
     }
 
@@ -60,9 +64,9 @@
     .two-lines{
         background-color: #292F39;
         height: 2px;
-        width: 300px;
+        width: 420px;
         position: relative;
-        top: 40px;
+        top: 25px;
     }
 
     .skills{
@@ -92,9 +96,13 @@
     .three-lines{
         background-color: white;
         height: 2px;
-        width: 300px;
+        width: 400px;
         position: relative;
         top: 35px;
+    }
+
+    .aboutMe div:nth-of-type(1){
+        margin-right: 10px;
     }
 
     .about-me{
@@ -117,7 +125,7 @@
     .four-lines{
         background-color: #292F39;
         height: 2px;
-        width: 300px;
+        width: 500px;
         position: relative;
         top: 35px;
     }
@@ -128,9 +136,10 @@
         color: #292F39;
     }
 
-    .project-row1, .project-row2{
+    .project-row-one, .project-row-two{
         display: flex;
-        justify-content: center;
+        flex-direction: row;
+        justify-content: space-evenly;
         text-align: center;
     }
 
@@ -138,17 +147,15 @@
         box-shadow: 12px 12px 2px 1px rgba(41, 47, 57, 0.2);
     }
 
-    #project-one{
+    .project-photo{
         width: 250px;
         height: 125px;
         border-radius: 10px;;
     }
 
-    #project-two{
-        width: 250px;
-        height: 125px;
+    .projects p{
+        font-size: 25px;
     }
-
     .contact-text{
         font-size: 30px;
     }
