--- a/style.css
+++ b/style.css
@@ -16,21 +16,21 @@ body{
 #lists{
     display: none;
     list-style: none;
+    justify-content: space-between;
     text-align: center; 
     margin-right: 50px;
-    position: relative;
-    top: -50px;
+    font-size: 25px;
 }
 
 #lists a{
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 .nav-bar{
     grid-column: 1/8;
     grid-row: 1/2;
-    background-color:#292F39;
+    background-color:rgba(41, 47, 57, 0.5);
     padding-bottom: 20px;
     width: 100%;
     position: fixed;
@@ -72,16 +72,16 @@ body{
 .main-content{
     grid-column: 1/8;
     grid-row: 2/3;
-    margin-bottom: 0;
+    margin: 0;
+    width: 100%;
 }
 
-.main-content .video{
-    margin-top: 80px;
-}
-
-video{
-    height: 100%;
-    width: 100%
+.main-content .animation{
+    background: url(/images/realistic-water-splash-dark-background_1355-88.jpg) no-repeat center;
+    background-size: cover;
+    width: 100%;
+    height: 70vh;
+    background-color: black;
 }
 
 .profile{
@@ -108,6 +108,7 @@ video{
 .intro h3{
     font-family: 'Wallpoet', sans-serif;
 }
+
 .intro p{
     font-family: 'charm', sans-serif;
     color:rgb(100, 99, 99)
@@ -191,9 +192,21 @@ video{
     font-size: 30px;
 }
 
-.projects .project-row1, .projects .project-row2{
+.projects p{
+    text-align: center;
+}
+
+.project-row-one, .project-row-two{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.project-photo{
+    width: 250px;
+    height: 120px;
+    border-radius: 10px;
 }
 
 #footer{
