--- a/desktop.css
+++ b/desktop.css
@@ -1,5 +1,5 @@
 @media  screen and (min-width: 992px) {
-    .right-icon{
+    .hamburger-icon{
         display: none;
     } 
 
@@ -14,19 +14,21 @@
 
     #lists{
         display: flex;
-        position: relative;
-        top: 0;
+        flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        position: relative;
+        top: 0;
     }
 
     #lists li{
         padding-left: 50px;
         font-size: 30px;
+        line-height: 5px;
     }
 
-    .left-icon{
-        margin: 0;
+    .home-icon{
+        line-height: 2px;
     }
 
     .main-content .animation{
