--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Charm:wght@700&family=Press+Start+2P&family=Wallpoet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Charm:wght@700&family=Creepster&family=Press+Start+2P&family=Wallpoet&display=swap');
 body{
     margin: 0;
@@ -26,7 +26,9 @@ body{
 
 #lists li{
     margin-bottom: 10px;;
+    font-family: 'Lobster', sans-serif;
 }
+
 #lists a{
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -47,6 +49,9 @@ body{
     justify-content: space-between;
 }
 
+.nav-bar a{
+    text-decoration: none;
+}
 .nav-bar i{
     color: white;
 }
@@ -109,6 +114,7 @@ body{
     position: relative;
     top: -20px;
 }
+
 .intro h3{
     font-family: 'Wallpoet', sans-serif;
 }
