--- a/desktop.css
+++ b/desktop.css
@@ -120,13 +120,16 @@
 
     .project-photo:hover{
         box-shadow: 12px 12px 2px 1px rgba(41, 47, 57, 0.2);
+    }
+
+    .moveRight:hover{
         animation-duration: 1.5s;
-        animation-name: popping;
+        animation-name: poppingRight;
         animation-iteration-count: infinite;
         animation-direction: alternate;
     }
 
-    @keyframes popping {
+    @keyframes poppingRight {
         from {
             margin-bottom: 0%;
             margin-left: 0%;
@@ -135,8 +138,52 @@
         }
         
         to{
-            margin-bottom: 10%;
-            margin-left: 10%;
+            margin-bottom: 20%;
+            margin-left: 20%;
+            width: 300px;
+            height: 175px;
+        }
+    }
+
+    .moveUp:hover{
+        animation-duration: 1.5s;
+        animation-name: poppingUp;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+    }
+
+    @keyframes poppingUp {
+        from {
+            margin-bottom: 0%;
+            width: 250px;
+            height: 125px;
+        }
+        
+        to{
+            margin-bottom: 20%;
+            width: 300px;
+            height: 175px;
+        }
+    }
+
+    .moveLeft:hover{
+        animation-duration: 1.5s;
+        animation-name: poppingLeft;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+    }
+
+    @keyframes poppingLeft {
+        from {
+            margin-bottom: 0%;
+            margin-left: 0%;
+            width: 250px;
+            height: 125px;
+        }
+        
+        to{
+            margin-bottom: 20%;
+            margin-left: -20%;
             width: 300px;
             height: 175px;
         }
