--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -57,9 +57,10 @@
         margin-top: 30px
     }
 
-    .about-me{
+    .main-content #about{
         padding: 50px 0;
-        margin: 50px 0;
+        margin: 50px auto;
+        width: 60%;
     }
 
     .three-lines{
